--- a/helm/voting-app/templates/deploy-result.yaml
+++ b/helm/voting-app/templates/deploy-result.yaml
@@ -30,8 +30,39 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: result
+  name: result-int
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector: { app: result }
   ports: [{ name: http, port: 80, targetPort: 80 }]
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: result-ing
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
+    alb.ingress.kubernetes.io/group.name: result-group
+    # Sticky sessions help with Socket.IO polling fallback
+    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600
+    # WebSocket keep-alive tuning
+    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600
+spec:
+  ingressClassName: alb
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: result-int
+                port:
+                  number: 80
+---
